--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">SpeechApp</string>
+    <string name="app_name">即时语音</string>
+    <string name="setting_file">setting</string>
 </resources>
